generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Species {
  DOG
  CAT
  OTHER
}

enum Sex {
  MALE
  FEMALE
  UNKNOWN
}

enum ChatRole {
  USER
  ASSISTANT
}

model User {
  id               String    @id @default(cuid())
  email            String    @unique
  passwordHash     String
  displayName      String
  phone            String?
  city             String    @default("Manizales")
  consentVersion   String?
  consentTimestamp  DateTime?
  createdAt        DateTime  @default(now())
  updatedAt        DateTime  @updatedAt
  lastLoginAt      DateTime?

  pets                Pet[]
  sessions            Session[]
  chatConversations   ChatConversation[]
  passwordResetTokens PasswordResetToken[]
}

model Pet {
  id        String    @id @default(cuid())
  ownerId   String
  name      String
  species   Species
  breed     String?
  birthDate DateTime?
  sex       Sex       @default(UNKNOWN)
  weightKg  Float?
  avatarUrl String?
  bio       String?
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt

  // PawTag: unique public tag ID for NFC/QR
  tagId     String    @unique @default(cuid())

  // PawTag: contact info for lost pet recovery
  ownerName  String?
  ownerPhone String?
  altPhone   String?

  // PawTag: medical info
  allergies   String?
  medications String?
  conditions  String?
  vetName     String?
  vetPhone    String?

  owner User @relation(fields: [ownerId], references: [id], onDelete: Cascade)

  @@index([ownerId])
  @@index([tagId])
}

model Session {
  id        String   @id @default(cuid())
  userId    String
  tokenHash String   @unique
  expiresAt DateTime
  createdAt DateTime @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}

model ChatConversation {
  id        String   @id @default(cuid())
  userId    String?
  createdAt DateTime @default(now())

  user     User?         @relation(fields: [userId], references: [id], onDelete: Cascade)
  messages ChatMessage[]

  @@index([userId])
}

model ChatMessage {
  id             String   @id @default(cuid())
  conversationId String
  role           ChatRole
  content        String
  createdAt      DateTime @default(now())

  conversation ChatConversation @relation(fields: [conversationId], references: [id], onDelete: Cascade)

  @@index([conversationId])
}

model PasswordResetToken {
  id        String    @id @default(cuid())
  userId    String
  tokenHash String    @unique
  expiresAt DateTime
  usedAt    DateTime?
  createdAt DateTime  @default(now())

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
}
